@@ -1,4 +1,5 @@
 0.12
+ - Fix subfield processing for multiple values.
  - Rewrite Transform to store external ids in 'external_ids' parameter.
 
 0.11 2024-07-03T16:36:27+02:00
